--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     <h2>Challenge</h2>
     <p><b>Call for particpations: </b>The workshop will host a competition focused on ...</p>
     <br>
-    <p><b>Submission site: </b>xxx</p>
+    <p><b>Submission site: </b>TBD</p>
   </div>
 </div>
 <p><br></p>
@@ -298,19 +298,19 @@
       <tbody>
         <tr>
           <td>Release of train sets</td>
-          <td>xxx</td>
+          <td>TBD</td>
         </tr>
         <tr>
           <td>Release of test set</td>
-          <td>xxx</td>
+          <td>TBD</td>
         </tr>
         <tr>
           <td>Submission deadline</td>
-          <td>xxx</td>
+          <td>TBD</td>
         </tr>
         <tr>
           <td>Workshop date</td>
-          <td>xxx</td>
+          <td>TBD</td>
         </tr>
       </tbody>
     </table>
@@ -476,6 +476,16 @@
     </div>
   </div>
 
+  <div class="col-xs-2">
+    <a href="https://jingkang50.github.io">
+      <img class="people-pic" src="https://jingkang50.github.io/images/profile.png">
+    </a>
+    <div class="people-name">
+      <a href="https://jingkang50.github.io">Jingkang Yang</a>
+      <h6>Nanyang Technological University</h6>
+    </div>
+  </div>
+
 </div>
 
 <!-- <div class="row text-center">
@@ -490,44 +500,8 @@
     </div>
   </div>
 
-  <div class="col-xs-2">
-    <a href="https://dritchie.github.io/">
-      <img class="people-pic" src="./egor1-worksho_files/daniel.png">
-    </a>
-    <div class="people-name">
-      <a href="https://dritchie.github.io/">Daniel Ritchie</a>
-      <h6>Brown University</h6>
-    </div>
-  </div>
 
-  <div class="col-xs-2">
-    <a href="https://ps.is.mpg.de/~jromero">
-      <img class="people-pic" src="./egor1-worksho_files/javier.jpeg">
-    </a>
-    <div class="people-name">
-      <a href="https://ps.is.mpg.de/~jromero">Javier Romero</a>
-      <h6>Meta</h6>
-    </div>
-  </div>
 
-  <div class="col-xs-2">
-    <a href="https://jianwang-cmu.github.io/">
-      <img class="people-pic" src="./egor1-worksho_files/jian.jpeg">
-    </a>
-    <div class="people-name">
-      <a href="https://jianwang-cmu.github.io/">Jian Wang</a>
-      <h6>Snap</h6>
-    </div>
-  </div>
-
-  <div class="col-xs-2">
-    <a href="https://hufu6371.github.io/huanfu/">
-      <img class="people-pic" src="./egor1-worksho_files/huan.jpeg">
-    </a>
-    <div class="people-name">
-      <a href="https://hufu6371.github.io/huanfu/">Huan Fu</a>
-      <h6>Alibaba</h6>
-    </div>
   </div>
 
   
@@ -551,14 +525,16 @@
   </div>
 
   <div class="col-xs-2">
-    <a href="https://jingkang50.github.io">
-      <img class="people-pic" src="https://jingkang50.github.io/images/profile.png">
+    <a href="https://dimadamen.github.io/about.html">
+      <img class="people-pic" src="imgs/dima.jpg">
     </a>
     <div class="people-name">
-      <a href="https://jingkang50.github.io">Jingkang Yang</a>
-      <h6>Nanyang Technological University</h6>
+      <a href="https://dimadamen.github.io/about.html">Dima Damen</a>
+      <h6>University of Bristol</h6>
     </div>
   </div>
+
+
   <!--
   <div class="col-xs-2">
     <a href="https://www.cs.sfu.ca/~haoz/">
@@ -583,7 +559,7 @@
 <div class="row">
   <div class="col-xs-12">
     <p>
-       We thank <span style="color:#1a1aff;font-weight:400;"> <a href="https://3dv-in-ecommerce.github.io/">3DV-in-Ecommerce</a></span> for the webpage format.
+       We thank <span style="color:#1a1aff;font-weight:400;"> <a href="https://3dv-in-ecommerce.github.io/">3dv-in-ecommerce</a></span> for the webpage format.
     </p>
   </div>
 </div>
