--- a/index.html
+++ b/index.html
@@ -534,6 +534,16 @@
     </div>
   </div>
 
+  <div class="col-xs-2">
+    <a href="https://ranjaykrishna.com/index.html">
+      <img class="people-pic" src="imgs/ranjay.jpeg">
+    </a>
+    <div class="people-name">
+      <a href="https://ranjaykrishna.com/index.html">Ranjay Krishna</a>
+      <h6>University of Washington</h6>
+    </div>
+  </div>
+
 
   <!--
   <div class="col-xs-2">
