--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <!--Twitter Card Stuff-->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="EgoX at NeurIPS 2025">
-  <!-- <meta name="twitter:image" content="https://3dv-in-ecommerce.github.io/static/img/bg.png"> -->
-  <meta name="twitter:url" content="https://3dv-in-ecommerce.github.io/">
+  <meta name="twitter:url" content="https://egox-vision.github.io/">
   <meta name="twitter:description" content="Website for the Workshop on EgoX at NeurIPS 2025">
 
   <!-- CSS  -->
@@ -38,7 +37,7 @@
   <div class="container">
     
     <div class="navbar-header">
-      <a class="navbar-brand" href="https://3dv-in-ecommerce.github.io/"></a>
+      <a class="navbar-brand" href="https://egox-vision.github.io/"></a>
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -49,7 +48,8 @@
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li><a href="#intro">Introduction</a></li>
-        <li><a href="#cfp">Challenge</a></li>
+        <li><a href="#challenge">Challenge</a></li>
+        <li><a href="#cfp">Call For Papers</a></li>
         <li><a href="#dates">Important Dates</a></li>
         <li><a href="#schedule">Schedule</a></li>
         <!--<li><a href="#accepted">Accepted Papers</a></li>-->
@@ -67,7 +67,7 @@
           <p><br></p>
 <div class="row">
   <div class="col-xs-12">
-    <center><h1>EgoX: Building the Foundation Models of Human Experience</h1></center>
+    <center><h1>EgoX: Building Foundation Models from First-Person Experience</h1></center>
     <center><h2>NeurIPS 2025 Workshop</h2></center>
     <!-- <center><span style="font-weight:400;">October 2, 2023 @ Paris, France</span></center> -->
     <!-- <center><span style="font-weight:400;">Room E06, Paris Convention Center</span></center> -->
@@ -78,7 +78,7 @@
 
 <hr>
 
-<!--<b>📢 Calling all researchers and enthusiasts! 🚀 Join our thrilling fine-grained 3D part labeling challenge built on the Amazon Berkeley Objects (ABO) Dataset: <a href="https://eval.ai/web/challenges/challenge-page/2027/overview" target="_blank">https://eval.ai/web/challenges/challenge-page/2027/overview</a>.</b>-->
+<b>📢 Calling all researchers and enthusiasts! 🚀 Join our thrilling ultra-long egocentric video reasoning challenge built on the EgoLife &amp; Ego-R1 Dataset: <a href="" target="_blank">TBD</a>.</b><br>
 <!-- <p><b>📢 Live Q&amp;A on Slido: <a href="https://app.sli.do/event/iYUGKVgj6AVdjGhY5dzvAd" target="_blank">https://tinyurl.com/3DVeComm-slido</a> (use it to ask questions for presentations and panel discussion).</b> <br>
 <b>📢 Remote presentations on Zoom: <a href="https://sfu.zoom.us/j/82710628380?pwd=OQaJJGWXuRr7IYakyPd8k6Em6iUAeg.1" target="_blank">https://tinyurl.com/3DVeComm-zoom</a>.</b></p> -->
 
@@ -90,7 +90,7 @@
 
 
  <b>Please give us your feedback on how the workshop went using this Google form: <a href='https://forms.gle/utMpEnF4hmUcR19S7'>https://forms.gle/utMpEnF4hmUcR19S7</a>.</b> -->
-
+<br>
 <div class="row" id="intro">
   <div class="col-xs-12">
     <h2>Introduction</h2>
@@ -99,9 +99,10 @@
 <div class="row">
   <div class="col-xs-12">
     <p>
-      This workshop aims to bring together researchers working on ...
+      This workshop brings together researchers working across egocentric computer vision, 3D scene understanding, video analysis, and embodied AI in robotics to tackle fundamental questions about how machines can comprehend first-person perspectives, spatial relationships, temporal dynamics and interactive behaviors that define human experience. This workshop will also explore how advances in foundation models can be leveraged and extended to capture the rich, multimodal nature of egocentric experience, paving the way for more intuitive, capable and human-aligned AI systems. 
+      <!-- We invited x keynote speakers from academia and x talks from industry experts. We will also host a challenge on ultra-long egocentric video reasoning.  -->
       <!-- This workshop aims to bring together researchers working on 3D computer vision and graphics for eCommerce, with a focus on the three topics: (1) 3D object/scene modeling and understanding in 3D eCommerce such as semantic segmentation, affordance and motion, multi-view reconstruction; (2) human modeling and fashion in 3D eCommerce such as virtual try-ons and personalized fashion recommendation, and (3) language-assisted reasoning such as shape/scene synthesis from texts and language grounding in 3D models. We invited 6 keynote speakers from academia and 3 talks from industry experts. We will also host a challenge on 3D part labeling for 3D models from real products sold online. -->
-     <!--This workshop aims to bring together researchers working on generative models of 3D shapes and scenes with researchers and practitioners who use these generative models in a variety of research areas. For our purposes, we define "generative model" to include methods that synthesize geometry unconditionally as well as from sensory inputs (e.g. images), language, or other high-level specifications. Vision tasks that can benefit from such models include scene classification and segmentation, 3D reconstruction, human activity recognition, robotic visual navigation, question answering, and more.-->
+      <!--This workshop aims to bring together researchers working on generative models of 3D shapes and scenes with researchers and practitioners who use these generative models in a variety of research areas. For our purposes, we define "generative model" to include methods that synthesize geometry unconditionally as well as from sensory inputs (e.g. images), language, or other high-level specifications. Vision tasks that can benefit from such models include scene classification and segmentation, 3D reconstruction, human activity recognition, robotic visual navigation, question answering, and more.-->
     </p>
   </div>
 </div>
@@ -276,12 +277,45 @@
 </div>
 <p><br></p> -->
 
-<div class="row" id="cfp">
+<div class="row" id="challenge">
   <div class="col-xs-12">
     <h2>Challenge</h2>
-    <p><b>Call for particpations: </b>The workshop will host a competition focused on ...</p>
+    <p><b>Call for particpations: </b>The workshop will host a competition focused on ultra-long egocentric video reasoning. The competition will use 6 videos, with average length of 44.3 hours from the EgoLife dataset, and 300 QAs from the Ego-R1 Benchmark. </p>
     <br>
     <p><b>Submission site: </b>TBD</p>
+    <p><b>Leaderboard: </b>TBD</p>
+  </div>
+</div>
+<p><br></p>
+
+<div class="row" id="cfp">
+  <div class="col-xs-12">
+    <h2>Call For Papers</h2>
+    <p>This workshop primarily focuses on the human-centric ...  </p>
+    <br>
+    <p>Relevant topics include but are not limited to:</p>
+    <ul>
+      <li>Egocentric Vision: </li>
+      <li>3D scene understanding: </li>
+      <li>Embodied AI in robotics: </li>
+    </ul>
+    <br>
+    <h6>Proceedings Track</h6>
+    <ul>
+      <li>Papers submitted to this track will be peer-reviewed and accepted papers will appear in the workshop proceedings</li>
+      <li>Submissions must be in the NeurIPS 2025 format with a maximum of 9 pages (excluding references)</li>
+      <li>Papers must be original work and not be submitted to other venues</li>
+      <li>Authors should follow the NeurIPS 2025 dual submission policy</li>
+    </ul>
+
+    <h6>Non-Proceedings Track</h6>
+    <ul>
+      <li>This track is ideal for papers that have been recently published or are under review elsewhere</li>
+      <li>Submissions can be up to 9 pages (excluding references) in NeurIPS 2025 format</li>
+      <li>Accepted papers will be presented at the workshop but will not appear in the proceedings</li>
+      <li>Authors should clearly indicate if their paper has been published elsewhere</li>
+    </ul>
+
   </div>
 </div>
 <p><br></p>
@@ -530,7 +564,7 @@
     </a>
     <div class="people-name">
       <a href="https://dimadamen.github.io/about.html">Dima Damen</a>
-      <h6>University of Bristol</h6>
+      <h6>University of Bristol &amp; Google DeepMind</h6>
     </div>
   </div>
 
@@ -540,21 +574,19 @@
     </a>
     <div class="people-name">
       <a href="https://ranjaykrishna.com/index.html">Ranjay Krishna</a>
-      <h6>University of Washington</h6>
+      <h6>University of Washington &amp; Ai2</h6>
     </div>
   </div>
 
-
-  <!--
   <div class="col-xs-2">
     <a href="https://www.cs.sfu.ca/~haoz/">
-      <img class="people-pic" src="./egor1-worksho_files/hao.jpg">
+      <img class="people-pic" src="imgs/richard.png">
     </a>
     <div class="people-name">
       <a href="https://www.cs.sfu.ca/~haoz/">Hao (Richard) Zhang</a>
-      <h6>Simon Fraser University &amp; Amazon</h6>
+      <h6>Simon Fraser University</h6>
     </div>
-  </div> -->
+  </div>
 </div>
 
 <p><br>
