--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li><a href="#intro">Introduction</a></li>
-        <li><a href="#challenge">Challenge</a></li>
+        <!-- <li><a href="#challenge">Challenge</a></li> -->
         <li><a href="#cfp">Call For Papers</a></li>
         <li><a href="#dates">Important Dates</a></li>
         <li><a href="#schedule">Schedule</a></li>
@@ -78,7 +78,6 @@
 
 <hr>
 
-<b>📢 Calling all researchers and enthusiasts! 🚀 Join our thrilling ultra-long egocentric video reasoning challenge built on the EgoLife &amp; Ego-R1 Dataset: <a href="" target="_blank">TBD</a>.</b><br>
 <!-- <p><b>📢 Live Q&amp;A on Slido: <a href="https://app.sli.do/event/iYUGKVgj6AVdjGhY5dzvAd" target="_blank">https://tinyurl.com/3DVeComm-slido</a> (use it to ask questions for presentations and panel discussion).</b> <br>
 <b>📢 Remote presentations on Zoom: <a href="https://sfu.zoom.us/j/82710628380?pwd=OQaJJGWXuRr7IYakyPd8k6Em6iUAeg.1" target="_blank">https://tinyurl.com/3DVeComm-zoom</a>.</b></p> -->
 
@@ -277,7 +276,7 @@
 </div>
 <p><br></p> -->
 
-<div class="row" id="challenge">
+<!-- <div class="row" id="challenge">
   <div class="col-xs-12">
     <h2>Challenge</h2>
     <p><b>Call for particpations: </b>The workshop will host a competition focused on ultra-long egocentric video reasoning. The competition will use 6 videos, with average length of 44.3 hours from the EgoLife dataset, and 300 QAs from the Ego-R1 Benchmark. </p>
@@ -286,7 +285,7 @@
     <p><b>Leaderboard: </b>TBD</p>
   </div>
 </div>
-<p><br></p>
+<p><br></p> -->
 
 <div class="row" id="cfp">
   <div class="col-xs-12">
@@ -331,15 +330,23 @@
     <table class="table table-striped">
       <tbody>
         <tr>
-          <td>Release of train sets</td>
+          <td>Paper Submission Open</td>
           <td>TBD</td>
         </tr>
         <tr>
-          <td>Release of test set</td>
+          <td>Proceedings Track Submission Deadline</td>
           <td>TBD</td>
         </tr>
         <tr>
-          <td>Submission deadline</td>
+          <td>Non-Proceedings Track Submission Deadline</td>
+          <td>TBD</td>
+        </tr>
+        <tr>
+          <td>Paper Acceptance Notification</td>
+          <td>TBD</td>
+        </tr>
+        <tr>
+          <td>Camera Ready Deadline</td>
           <td>TBD</td>
         </tr>
         <tr>
